website/static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto' ,Arial, sans-serif;
}

.container {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.sidebar {
    width: 15%;
    background-color: #2c3e50;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    transition: width 0.3s;
}

.sidebar.collapsed {
    width: 60px;
    padding: 20px 5px;
    align-items: center;
}

.sidebar ul {
    list-style-type: none;
    margin-top: 60px;
}

.sidebar ul li {
    margin: 15px 0;
}

.sidebar ul li a {
    color: white;
    text-decoration: none;
    font-size: 1.2em;
}

.sidebar ul li a:hover {
    text-decoration: underline;
}

.app-name {
    text-align: center;
    font-size: 1.5em;
    font-weight: bold;
    cursor: pointer;
}

.app-name.menu-item,
.sidebar ul li a.menu-item {
    transition: opacity 0.3s;
}

.sidebar.collapsed .menu-item {
    opacity: 0;
}

.topbar {
    width: calc(100% - 15%);
    height: 50px;
    background-color: white;
    color: #2c3e50;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.5em;
    position: fixed;
    top: 0;
    left: 15%;
    transition: left 0.3s, width 0.3s;
    border-bottom: 2px solid black;
    z-index: 9;
    font-weight: bold;
}

.topbar.shifted {
    left: 60px;
    width: calc(100% - 60px);
}

.content {
    width: 85%;
    padding: 70px 20px 20px 20px;
    margin-left: 15%;
    transition: margin-left 0.3s;
    flex-grow: 1;
    overflow-y: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content.shifted {
    margin-left: 60px;
}

.hamburger-menu {
    font-size: 2em;
    cursor: pointer;
    position: fixed;
    top: 15px;
    left: 20px;
    z-index: 10;
    color: white;
}

.signup-form-container,
.login-form-container {
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 400px;
    width: 100%;
    box-sizing: border-box;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    left: calc(50% + 7.5%);
    transition: left 0.3s;
}

.content.shifted .signup-form-container,
.content.shifted .login-form-container {
    left: calc(50% + 30px);
}

.signup-form-container h2,
.login-form-container h2 {
    margin-bottom: 20px;
    color: #2c3e50;
}

.signup-form-container form,
.login-form-container form {
    display: flex;
    flex-direction: column;
}

.signup-form-container label,
.login-form-container label {
    margin-bottom: 5px;
    color: #2c3e50;
}

.signup-form-container input,
.login-form-container input {
    margin-bottom: 15px;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
}

.signup-form-container button,
.login-form-container button {
    padding: 10px;
    background-color: #2c3e50;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 1em;
    cursor: pointer;
}

.signup-form-container button:hover,
.login-form-container button:hover {
    background-color: #34495e;
}

.add-note-btn {
    position: absolute;
    top: 70px;
    left: calc(15% + 20px);
    background-color: #2c3e50;
    color: white;
    border: none;
    border-radius: 50%;
    width: 60px;
    height: 60px;
    font-size: 2em;
    line-height: 60px;
    text-align: center;
    cursor: pointer;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s, box-shadow 0.3s, left 0.3s;
}

.add-note-btn:hover {
    background-color: #1a252f;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
}

.content.shifted .add-note-btn {
    left: calc(60px + 20px);
}

.modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #fefefe;
    margin: 10% auto;
    padding: 20px;
    border: none;
    width: 80%;
    max-width: 600px;
    border-radius: 10px;
    font-family: 'Roboto', Arial, sans-serif;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
    cursor: pointer;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.modal-content h2 {
    margin-top: 0;
    color: #2c3e50;
    font-size: 1.8em;
}

.modal-content form {
    display: flex;
    flex-direction: column;
}

.modal-content input,
.modal-content textarea {
    margin-bottom: 15px;
    padding: 10px;
    border: none;
    font-size: 1.4em;
    border-radius: 5px;
    outline: none;
    resize: none;
    overflow: hidden;
    background: #fefefe;
    box-shadow: none;
}

.modal-content textarea {
    height: auto;
    min-height: calc(1.4em * 10);
}

.modal-content input::placeholder,
.modal-content textarea::placeholder {
    color: #999;
    font-size: 1em;
}

.modal-content input:focus,
.modal-content textarea:focus {
    border: none;
}

.modal-content .separator {
    height: 2px;
    background-color: black;
    margin: 0;
}

.modal-buttons {
    display: flex;
    justify-content: flex-end;
    gap: 10px;
}

.save-btn {
    padding: 10px 20px;
    background-color: #2c3e50;
    color: white;
    border: none;
    border-radius: 25px;
    font-size: 1em;
    cursor: pointer;
}

.save-btn:hover {
    background-color: #1a252f;
}

.cancel-btn {
    padding: 10px 20px;
    background-color: white;
    color: #2c3e50;
    border: 2px solid #2c3e50;
    border-radius: 25px;
    font-size: 1em;
    cursor: pointer;
}

.cancel-btn:hover {
    background-color: #f2f2f2;
}

